golang/microservice/kubernetes/templates/ingress-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-ingress-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-ingress
  template:
    metadata:
      labels:
        app: nginx-ingress
    spec:
      containers:
      - name: nginx-ingress-controller
        image: query.io/kubernetes-ingress-controller/nginx-ingress-controller:0.21.0
        resources: {}
        args:
        - ./nginx-ingress-controller
        - --configmap=$(POD_NAMESPACE)/nginx-configmap
        ports:
          - name: http 
            containerPort: 80
          - name: https
            containerPort: 443
